Add alert on prediction save and taylor colors: :

--- a/src/app/components/game-predict/game-predict.component.less
+++ b/src/app/components/game-predict/game-predict.component.less
@@ -111,10 +111,13 @@ p{
 .prediction-badge{
     border-radius: 2em;
     &[data-playerName="Logan"]{
-        background: darkblue;
+        background: #014d8f;
     }
     &[data-playerName="Nick"]{
-        background: darkorange;
+        background: #de7104;
+    }
+    &[data-playerName="Taylor"]{
+        background: #a723c4;
     }
 }
 
