Add Bernadette color

--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -107,6 +107,9 @@ p{
     &[data-playerName="Taylor"]{
         background: #a723c4;
     }
+    &[data-playerName="Bernadette"]{
+        background: #32a852;
+    }
 }
 
 .away-predictions{
