Added some more colors

--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -99,7 +99,7 @@ p{
 .prediction-badge{
     border-radius: 2em;
     &[data-playerName="Logan"]{
-        background: #014d8f;
+        background: #003563;
     }
     &[data-playerName="Nick"]{
         background: #de7104;
@@ -109,6 +109,16 @@ p{
     }
     &[data-playerName="Bernadette"]{
         background: #32a852;
+    }
+    &[data-playerName="Mom"]{
+        background: #0080C6;
+    }
+    &[data-playerName="Dad"]{
+        background: #869397;
+        color: black;
+    }
+    &[data-playerName="Joey"]{
+        background: #008348;
     }
 }
 
