Fixed previous color changes and added border on names and margin

--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -97,7 +97,9 @@ p{
 }
 
 .prediction-badge{
+    margin-top: 10px;
     border-radius: 2em;
+    border: black solid 1px;
     &[data-playerName="Logan"]{
         background: #003563;
     }
@@ -115,10 +117,9 @@ p{
     }
     &[data-playerName="Dad"]{
         background: #869397;
-        color: black;
     }
     &[data-playerName="Joey"]{
-        background: #008348;
+        background: #063f25;
     }
 }
 
