Added dad's color changed my color

--- a/src/app/game/game.component.less
+++ b/src/app/game/game.component.less
@@ -101,7 +101,8 @@ p{
     border-radius: 2em;
     border: black solid 1px;
     &[data-playerName="Logan"]{
-        background: #003563;
+        background: #FFB612;
+        color: black;
     }
     &[data-playerName="Nick"]{
         background: #de7104;
@@ -116,7 +117,7 @@ p{
         background: #0080C6;
     }
     &[data-playerName="Dad"]{
-        background: #869397;
+        background: #0a3291;
     }
     &[data-playerName="Joey"]{
         background: #063f25;
